添加日志，打包支持